pill and ID names wrap fix

--- a/services/app-web/src/components/HealthPlanPackageTable/HealthPlanPackageTable.module.scss
+++ b/services/app-web/src/components/HealthPlanPackageTable/HealthPlanPackageTable.module.scss
@@ -26,12 +26,16 @@
     }
 }
 
+.ID {
+    word-break: break-all;
+}
+
 .programTag {
     background: custom.$mcr-primary-lighter;
     color: custom.$mcr-foundation-ink;
-    display: inline-block;
+    display: inline-flex;
     text-align: center;
-    overflow: auto;
+    overflow-wrap: break-word;
 }
 
 .submittedTag {
